force-app/main/default/objects/docutizexa__OutputHistory__c/docutizexa__OutputHistory__c.object-meta.xml
<CustomObject>
    <label>Output History</label>
    <nameField>
        <displayFormat>OH-{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>