force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__Message__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Message__c</fullName>
    <label>Message</label>
    <length>4090</length>
    <type>LongTextArea</type>
</CustomField>