force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__OproartsRequestParameter__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OproartsRequestParameter__c</fullName>
    <label>Request Entity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>