force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__OutputCategory__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OutputCategory__c</fullName>
    <label>Output Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>