force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__OutputDatetime__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OutputDatetime__c</fullName>
    <label>Output Datetime</label>
    <type>DateTime</type>
</CustomField>