force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__OutputStatus__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OutputStatus__c</fullName>
    <label>Output Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>