force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__OutputUser__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OutputUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OutputHistories</relationshipName>
    <type>Lookup</type>
</CustomField>