force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__ReportName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ReportName__c</fullName>
    <formula>docutizexa__TargetReport__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setting Name</label>
    <type>Text</type>
</CustomField>