force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__TargetRecordIdForMasterList__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TargetRecordIdForMasterList__c</fullName>
    <label>Target Record Ids</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>