force-app/main/default/objects/docutizexa__OutputHistory__c/fields/docutizexa__TargetReport__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TargetReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Report</label>
    <referenceTo>docutizexa__Report__c</referenceTo>
    <relationshipLabel>Output Histories</relationshipLabel>
    <relationshipName>OutputHistories</relationshipName>
    <type>Lookup</type>
</CustomField>