force-app/main/default/objects/docutizexa__OutputHistory__c/listViews/docutizexa__All.listView-meta.xml
<ListView>
    <fullName>docutizexa__All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>docutizexa__OutputMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>